# Poly-arb-bot-sum-1

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: config.rs  main.rs  stats.rs  types.rs
src/opinion/: market_data.rs  mod.rs  types.rs
src/pm/: execution_observer.rs  market_data.rs  mod.rs
src/source/: mod.rs  polymarket.rs
src/strategy/: mod.rs  mod_.rs  sum_arb.rs
